# QuantSys

./: .gitignore  CmakeLists.txt  README.md
libs/memory_allocator/: CMakeLists.txt
libs/memory_allocator/include/: memory_allocator.hpp  typed_allocator.hpp
libs/memory_allocator/src/: memory_allocator.cpp  test_memory_allocator.cpp
